k8s/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 8080
